Fix Parliament selector when displaying on mobiles
may not be final design but works for now

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -42,7 +42,12 @@ ul, li {
         @media #{$small} {
             margin-bottom: 1.5em;
         }
+        .left {
+            background: black;
+            background-color: black;
+        }
 
+        @media #{$small} {
         // all this triangle stuff adapted from http://nicolasgallagher.com/pure-css-speech-bubbles/
         #triangle-isosceles {
            position:absolute;
@@ -151,6 +156,7 @@ ul, li {
                     }
                 }
             }
+        }
         }
 
         .right {
